--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <div class="gift-section">
         <h2 class="gift-caption">How my face changes when I see you: 😊</h2>
         <h3>(Hover over the gift)</h3>
-        <div class="gift-img" id="gift-face"></div>
+        <div class="gift-img" class="responsive" id="gift-face"></div>
     </div>
     <div class="gift-section">
         <h2 class="gift-caption">You are ... 😍</h2>
-        <div class="gift-img" id="gift-gorgeous"></div>
+        <div class="gift-img" class="responsive" id="gift-gorgeous"></div>
     </div>
     <div class="gift-section">
         <h2 class="gift-caption">If I had to describe you with ONE word: 👇</h2>
-        <div class="gift-img" id="gift-genius"></div>
+        <div class="gift-img" class="responsive" id="gift-genius"></div>
     </div>
     <div class="gift-section">
         <h2 class="gift-caption">The only person as badass as you: 💪</h2>
-        <div class="gift-img" id="gift-badass"></div>
+        <div class="gift-img" class="responsive" id="gift-badass"></div>
     </div>
     <div class="gift-section">
         <h2 class="gift-caption">And finally ... 🤗</h2>
-        <div class="gift-img" id="gift-final"></div>
+        <div class="gift-img" class="responsive" id="gift-final"></div>
     </div>
     <p id="footer">Made by <span>Diyorbek Abdimalikov</span></p>
 </body>
