Made actually responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="gift-img" class="responsive" id="gift-face"></div>
     </div>
     <div class="gift-section">
-        <h2 class="gift-caption">You are ... 😍</h2>
-        <div class="gift-img" class="responsive" id="gift-gorgeous"></div>
+        <h2 class="gift-caption">Also ... 😍</h2>
+        <div class="gift-img" class="responsive" id="gift-beautiful"></div>
     </div>
     <div class="gift-section">
         <h2 class="gift-caption">If I had to describe you with ONE word: 👇</h2>
@@ -34,7 +34,7 @@
         <div class="gift-img" class="responsive" id="gift-badass"></div>
     </div>
     <div class="gift-section">
-        <h2 class="gift-caption">And finally ... 🤗</h2>
+        <h2 class="gift-caption">And finally you're ... 🤗</h2>
         <div class="gift-img" class="responsive" id="gift-final"></div>
     </div>
     <p id="footer">Made by <span>Diyorbek Abdimalikov</span></p>
